@@ -6,6 +6,7 @@ bugfixes:
 - action files created with versions of JT Pump Driver that only support 4 pumps
   can now be loaded and executed without errors
 - the settings for pump 5 - 8 are now disabled when their step is not used
+- no action file can be loaded or saved while the pumps are running
 
 
 from version 0.96 to 0.97
